--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "element-ui": "^1.4.1",
-    "iview": "^2.0.0-rc.18",
     "mysql": "^2.13.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.1.10",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.2.0",
+    "vuedraggable": "^2.15.0",
     "webpack-dev-server": "^2.5.1"
   },
   "devDependencies": {
