--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.2.0",
     "vuedraggable": "^2.15.0",
+    "vuex": "^3.0.1",
     "webpack-dev-server": "^2.5.1"
   },
   "devDependencies": {
